完成数据统计功能 优化表格形式

--- a/views/questionaire.ejs
+++ b/views/questionaire.ejs
@@ -44,6 +44,12 @@
     .cursor {
       cursor: pointer;
     }
+    th {
+      text-align: center; 
+    }
+    td {
+      text-align: center; 
+    }
   </style>
 </head>
 
