--- a/views/statistics/list.ejs
+++ b/views/statistics/list.ejs
@@ -161,7 +161,7 @@
             <div class="card-footer border-top-blue-grey border-top-lighten-5 text-muted">
               <span class="tags float-xs-right">
 
-                  <a href="/payment/orderinfo?oid=<%= compileStr('YCJ20190608' + details[i].order_id) %>&session=<%= compileStr('YCJ20190608' + i) %>">
+                  <a href="/statistics/result?questionaireid=<%=details[i].id%>%>">
                   <span class="tag tag-pill tag-success">查看统计结果</span></a>
               </span>
             </div>
