--- a/views/manage/showlist.ejs
+++ b/views/manage/showlist.ejs
@@ -219,11 +219,12 @@
                       <th class="hidden-xs">最大填写次数</th>
                       <th>结束时间</th>
                       
-                      <% if (details[i].status != 0) { %>
+                      <% if (details[i].status == 1) { %>
                         <th>填写链接</th>
                         <th>当前填写次数</th>
+                      <% } else if (details[i].status == 2) { %>
+                        <th>当前填写次数</th>
                       <% } %>
-
                       <tr>
                         <td><%= details[i].title %></td>
 
@@ -239,9 +240,11 @@
 
                         <td class="hidden-xs"><%= details[i].maxnum %></td>
                         <td><%= dateFormat(details[i].end_time) %></td>
-                        <% if (details[i].status != 0) { %>
+                        <% if (details[i].status == 1) { %>
                           <td><a href="<%= details[i].url %>"><%= details[i].url %></a></td>
                           <td><%= details[i].cur_num %></td>                         
+                        <% } else if (details[i].status == 2) { %>
+                          <td><%= details[i].cur_num %></td>
                         <% } %>
                       </tr>
                     </tbody>
