--- a/views/manage/showlist.ejs
+++ b/views/manage/showlist.ejs
@@ -271,7 +271,7 @@
                   </form>
                 <% } %>
                 <% if (details[i].status == 2) { %>
-                  <a href="/payment/orderinfo?oid=<%= compileStr('YCJ20190608' + details[i].order_id) %>&session=<%= compileStr('YCJ20190608' + i) %>">
+                  <a href="/statistics/result?questionaireid=<%=details[i].id%>%>">
                   <span class="tag tag-pill tag-success">查看统计结果</span></a>
                 <% } %>
               </span>
