--- a/views/manage/showlist.ejs
+++ b/views/manage/showlist.ejs
@@ -144,7 +144,7 @@
                   </div>
                     <div class="modal-footer">
                       <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-                      <button type="button" class="btn btn-info" id ="createsubmit">提交更改</button>
+                      <button type="button" class="btn btn-info" id ="createsubmit">确认创建</button>
                   </div>
                 </div><!-- /.modal-content -->
             </div><!-- /.modal -->
